DB inserts complete

--- a/templates/head.html
+++ b/templates/head.html
@@ -1,17 +1,13 @@
-<!-- 
-{{#each content}}
-	{{#if check "first" name}}
-		{{name}} - {{text}}<br>
-	{{/if}}
-{{/each}}
--->
+<!-- {{returnText "{nameOfSection}"}} -->
 
 <head>
 	<title>Tom Arrell - Home</title>
 	<meta name="description" content="Tom Arrell is a software developer specializing in the NodeJS and Meteor stack. He is also experienced across numerous languages and has a strong base in OOP.">
 	<meta name="keywords" content="Tom, Arrell, developer, software, programming, website, nodejs, application, web, app, programmer, coding">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylsheet" type="text/css" href="/stylesheets/fonts.css">
+	<link rel="stylesheet" type="text/css" href="http://anijs.github.io/lib/anicollection/anicollection.css">
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/AniJS/0.9.3/anijs-min.js"></script>
 </head>
 
 <body>
@@ -35,3 +31,4 @@
 	</div>
 
 </body>
+
