--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,3 +1,9 @@
+/* Global */
+.row {
+	padding: 0 10px;
+}
+
+
 /***********************/
 /******* NAV BAR *******/
 /***********************/
@@ -50,6 +56,41 @@
 	/*background-image: linear-gradient(to bottom right,rgba(130, 109, 219, 0.81) 0%,rgb(94, 180, 230) 50.2%,rgb(69, 187, 255) 100%);*/
 	background-image: radial-gradient(circle,rgb(110, 213, 255) 0%,rgba(63, 255, 225, 0) 100%), linear-gradient(to bottom right,rgba(109, 35, 204, 0.79) 0%,rgb(63, 255, 225) 100%);
 	/*background-image: radial-gradient(circle, rgba(151, 219, 225, 0.7), rgba(255, 255, 255, 0)), linear-gradient(135deg, #8c5a9c 0%, #00dcdd 100%);*/
-	padding-top: 65px;
-	height: 600px;
+	padding: 190px 0;
+}
+h1 {
+	font-family: "MuseoSans";
+	font-weight: 700;
+	color: white;
+	font-size: 42px;
+}
+h2 {
+	font-family: "MuseoSans";
+	font-weight: 500;
+	color: white;
+	font-size: 28px;
+}
+.opacity {
+	opacity: 0.8;
+}
+h3 {
+	font-family: "MuseoSans";
+	font-weight: 300;
+	color: white;
+	font-size: 22px;
+	line-height: 35px;
+}
+hr {
+	width: 300px;
+}
+
+/***********************/
+/****** SECTION 2 ******/
+/***********************/ 
+.section2 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+.s2Title {
+	color: #222;
 }
