Restructured files, account login + dashboard

--- a/templates/head.html
+++ b/templates/head.html
@@ -1,17 +1,21 @@
 <!-- {{returnText "{nameOfSection}"}} -->
 
-<head>
-	<title>Tom Arrell - Home</title>
-	<meta name="description" content="Tom Arrell is a software developer specializing in the NodeJS and Meteor stack. He is also experienced across numerous languages and has a strong base in OOP.">
-	<meta name="keywords" content="Tom, Arrell, developer, software, programming, website, nodejs, application, web, app, programmer, coding">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="http://anijs.github.io/lib/anicollection/anicollection.css">
-	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/AniJS/0.9.3/anijs-min.js"></script>
-</head>
+<template name="head">
 
-<body>
-	
+	<head>
+		<title>Tom Arrell - {{title}}</title>
+		<meta name="description" content="Tom Arrell is a software developer specializing in the NodeJS and Meteor stack. He is also experienced across numerous languages and has a strong base in OOP.">
+		<meta name="keywords" content="Tom, Arrell, developer, software, programming, website, nodejs, application, web, app, programmer, coding">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="http://anijs.github.io/lib/anicollection/anicollection.css">
+		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/AniJS/0.9.3/anijs-min.js"></script>
+	</head>
+
+</template>
+
+<template name="nav">
+
 	<div class="container-fluid top">
 		<div class="row">
 		<nav class="col-md-12 header">
@@ -30,5 +34,4 @@
 		</div>
 	</div>
 
-</body>
-
+</template>
