--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -32,6 +32,7 @@
 	float: right;
 	list-style: none;
 	margin: 0;
+	border: none;
 }
 .navbar li {
 	float: left;
@@ -42,7 +43,7 @@
 .navbar li a{
 	float: left;
 	color: white;
-	padding: 20px;
+	padding: 21px;
 	font-family: "MuseoSans";
 }
 .navbar li a:hover{
