--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 
 <template name="home">
 	
+	{{> head title="Home"}}
+	{{> nav}}
+
 	<div class="container-fluid section1">
 		<div class="container">
 			<div class="row text-center" data-anijs="if: click, on: body, do: pulse animated">
