--- a/ChangeCMS/templates/manage.html
+++ b/ChangeCMS/templates/manage.html
@@ -97,9 +97,20 @@
 	<div class="change-popout">
 		<nav class="change-sidebar">
 			<ul>
+				<li><label class="change-label">Main</label></li>
 				<li><a href="#" class="change-tab1"><i class="fa fa-file-text-o"></i> &nbsp;Pages</a></li>
 				<li><a href="#" class="change-tab2"><i class="fa fa-th"></i> &nbsp;Items</a></li>
 				<li><a href="#" class="change-tab3"><i class="fa fa-line-chart"></i> &nbsp;Analytics</a></li>
+				<li class="change-sidebar-spacer"><hr class="change-hr"></li> 									<!-- Horizontal Divider -->
+				<li><label class="change-label">Social</label></li>
+				<li><a href="#" class="change-tab4"><i class="fa fa-facebook"></i> &nbsp;&nbsp;Facebook</a></li>
+				<li><a href="#" class="change-tab4"><i class="fa fa-twitter"></i> &nbsp;Twitter</a></li>
+				<li><a href="#" class="change-tab4"><i class="fa fa-google-plus"></i> &nbsp;Google+</a></li>
+				<li class="change-sidebar-spacer"><hr class="change-hr"></li> 									<!-- Horizontal Divider -->
+				<li><label class="change-label">Admin</label></li>
+				<li><a href="#" class="change-tab4"><i class="fa fa-user"></i> &nbsp;Users</a></li>
+				<li><a href="#" class="change-tab5"><i class="fa fa-cog"></i> &nbsp;Settings</a></li>
+				<li><a href="#" class="change-tab6"><i class="fa fa-support"></i> &nbsp;Support</a></li>
 			</ul>
 		</nav>
 	</div>
