--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@ Index.insert({name:"title", text:"Hi, I'm Tom"})
 
 <template name="home">
 
+	{{> head}}
+	{{> nav}}
+
 	<div class="container-fluid section1">
 		<div class="container">
 			<div class="row text-center" data-anijs="if: click, on: body, do: pulse animated">
