--- a/app/templates/manage.html
+++ b/app/templates/manage.html
@@ -1,5 +1,8 @@
 <!-- {{returnText "{nameOfSection}"}} -->
 
+<!-- Username: Tom -->
+<!-- Password: test -->
+
 <!-- Head Template -->
 <template name="ChangeHead">
 
@@ -46,7 +49,7 @@
 
 <!-- CMS Login check -->
 <template name="manage">
-	
+
 	{{> ChangeHead title="login"}}
 
 	{{#if currentUser}}
@@ -86,14 +89,14 @@
 </template>
 
 <template name="dashboard">
-	
+
 	{{> DashTop}}
 	{{> ChangeSidebar}}
 
 </template>
 
 <template name="ChangeSidebar">
-	
+
 	<div class="change-popout">
 		<nav class="change-sidebar">
 			<ul>
@@ -120,7 +123,7 @@
 </template>
 
 <template name="DashTop">
-	
+
 	<div class="change-DashTop">
 		<div class="row">
 			<div class="change-navIcon"><i class="fa fa-bars"></i></div>
