--- a/app/templates/manage.html
+++ b/app/templates/manage.html
@@ -96,7 +96,9 @@
 	{{> DashTop}}
 	{{> ChangeSidebar}}
 
-	{{> Template.dynamic template=currentTab}}
+	<div class="change-tab-content">
+		{{> Template.dynamic template=currentTab}}
+	</div>
 
 </template>
 
