Renamed / route home->index

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 Index.insert({name:"title", text:"Hi, I'm Tom"})
  -->
 
-<template name="home">
+<template name="index">
 
 	{{> head}}
 	{{> nav}}
