Started global return/add content function

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@ Index.insert({name:"title", text:"Hi, I'm Tom"})
 		<div class="container">
 			<div class="row text-center" data-anijs="if: click, on: body, do: pulse animated">
 				<h1>{{{returnText "title"}}}</h1>
+				<h1>{{superAdd "index" "text" "Something else"}}</h1>
 				<!-- <h2 class="opacity">{{returnText "underTitle"}}</h2> -->
 			</div>
 			<hr>
@@ -162,7 +163,7 @@ Index.insert({name:"title", text:"Hi, I'm Tom"})
 	<footer class="container-fluid footer">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				Want to find me elsewhere? Feel free to go have a nosey at my <a>Github</a> for most of my latest work.
+				Want to find me elsewhere? Feel free to go have a nosey at my <a href="https://github.com/tomarrell">Github</a> for most of my latest work.
 			</div>
 		</div>
 	</footer>
