Complete returnText functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             </div>
             <hr>
             <div class="row text-center">
-                <!-- <h3>{{superAdd "index" "subtitle" "text" "and I like to code things."}}</h3> -->
+                <h3>{{superAdd "index" "subtitle" "text" "and I like to code things."}}</h3>
             </div>
         </div>
     </div>
