Added all external dependencies locally

--- a/templates/head.html
+++ b/templates/head.html
@@ -7,9 +7,8 @@
 		<meta name="description" content="Tom Arrell is a software developer specializing in the NodeJS and Meteor stack. He is also experienced across numerous languages and has a strong base in OOP.">
 		<meta name="keywords" content="Tom, Arrell, developer, software, programming, website, nodejs, application, web, app, programmer, coding">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="http://anijs.github.io/lib/anicollection/anicollection.css">
-		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/AniJS/0.9.3/anijs-min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/anicollection.css">
+		<script src="/anijs.min.js"></script>
 	</head>
 
 </template>
@@ -19,7 +18,7 @@
 	<div class="container-fluid top">
 		<div class="row">
 		<nav class="col-md-12 header">
-			
+
 			<div class="logo">
 				<a href="/">Tom Arrell</a>
 			</div>
