--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,8 @@
 		<meta name="description" content="ChangeCMS is responsive content management platform for your site, built on top of NodeJS and Meteor.">
 		<meta name="keywords" content="ChangeCMS, NodeJS, Tom Arrell, web CMS, content management, tomarrell, meteor">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="http://anijs.github.io/lib/anicollection/anicollection.css">
-		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/AniJS/0.9.3/anijs-min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/anicollection.css">
+		<script src="/anijs.min.js"></script>
 	</head>
 
 </template>
